# Template_ReDSM5

./: .gitignore  Optimization_Examples  Optimization_List  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/DSM5/: MDD_Criteira.json
data/redsm5/: redsm5_annotations.csv
src/Project/: __init__.py
src/Project/SubProject/models/: model.py
src/Project/SubProject/utils/: __init__.py  log.py  mlflow_utils.py  seed.py
